# TaskSchedulingFramework

./: CMakeLists.txt  README.md
implementation/src/: main.cpp
interface/TaskSchedulingFramework/: ChannelManager.hpp  Task.h  Task.hpp  TaskChannel.h  TaskChannel.hpp  TaskFunctor.h  TaskInput.h
